--- a/Birthday.html
+++ b/Birthday.html
@@ -195,8 +195,8 @@ footer {
       <div class="wrap">
         <p>Dear Phuong,</p>
         <p>Happy 19th birthday!</p>
-        <p>A wish for you on your birthday, whatever you ask may you receive, whatever you seek may you find, whatever you wish may it be fulfilled on your birthday and always!</p>
-        <p>I will be there with you in your side whenever you seek me.</p>
+        <p>Another year older, and you just keep getting stronger, beautifuler, funnier and more amazing!</p>
+        <p>I will be there with you in your side whenever you seek me!</p>
         <p>Hope your birthday is as beautiful and wonderful as you are to my eyes!</p>
         <center><h4>Love you,</h4></center>
         <p class="signed">Gia Hung</p>
