--- a/Birthday.html
+++ b/Birthday.html
@@ -197,7 +197,7 @@ footer {
         <p>Another year older, and you just keep getting stronger, beautifuler, funnier and more amazing!</p>
         <p>I will be there with you in your side whenever you seek me!</p>
         <p>Hope your birthday is as beautiful and wonderful as you are to my eyes!</p>
-        <center><h4>Love you,</h4></center>
+        <center><h4>From</h4></center>
         <p class="signed">Gia Hung</p>
         
       </div>
